moved Rover project up

--- a/index.html
+++ b/index.html
@@ -449,6 +449,44 @@ _________________________________________________________ -->
                     <!-- Reference detail -->
 
                     <div id="references-masonry" data-animate="fadeInUp">
+                        <!-- Mars Rover -->
+                        <div class="reference-item" data-category="webdesign">
+                            <div class="reference">
+                                <a href="#">
+                                    <img src="images/Projects/MarsRover.jpg" class="img-responsive" alt="" />
+
+                                    <div class="overlay">
+                                        <h3 class="reference-title">Mars Rover</h3>
+                                        <p>A rover controlling app</p>
+                                    </div>
+                                </a>
+
+                                <div class="sr-only reference-description" data-images="images/Projects/MarsRover1.jpg,images/Projects/MarsRover2.jpg,images/Projects/MarsRover3.jpg">
+
+                                    <p>This project was my entry to the Google code tech challenge found
+                                        <a href="https://code.google.com/archive/p/marsrovertechchallenge/">here</a>. The goal is to design an app to deploy rovers on curiously rectangular
+                                        plateaus on Mars. Input is restricted to simple text stings which introduced a number
+                                        of challenges with validating input and processing commands. I thought this app would
+                                        make a neat single page application of sorts, so I used Angular 5. That helped me
+                                        easily validate the user input and create an interesting method to display the data.
+                                        Further developments could include more game-like objects like obstacles, collisions,
+                                        and displaying the rovers' routes as they move.
+                                    </p>
+                                    <p>
+                                        Using:
+                                        <i>Angular 5, Node.js, Express.js, HTML5, CSS, Javascript, AWS, GIT</i>
+                                    </p>
+
+                                    <p class="buttons">
+                                        <a class="btn btn-primary" href="http://54.187.117.199/">
+                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <a class="btn btn-primary" href="https://github.com/amalfushi/MarsRover">
+                                            <i class="fa fa-github"></i> GitHub</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- C# Uno -->
                         <div class="reference-item" data-category="games">
                             <div class="reference">
                                 <a href="#">
@@ -473,7 +511,9 @@ _________________________________________________________ -->
                                         it would be great to allow for multiple players, more robust logic on opponents'
                                         turns, and making the game more visually appealing.
                                     </p>
-                                    <p>Using: <i>C#, ASP.NET, Entity Framework</si></p>
+                                    <p>Using:
+                                        <i>C#, ASP.NET, Entity Framework</si>
+                                    </p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/C-Sharp-Uno">
@@ -482,6 +522,7 @@ _________________________________________________________ -->
                                 </div>
                             </div>
                         </div>
+                        <!-- Inventory Manager -->
                         <div class="reference-item" data-category="applications">
                             <div class="reference">
                                 <a href="#">
@@ -507,7 +548,9 @@ _________________________________________________________ -->
                                         to update quantities simply and quickly. The UI also highlights which supplies are
                                         low based on an ideal count.
                                     </p>
-                                    <p>Using: <i>Java, Apache POI, Microsoft Excel</i></p>
+                                    <p>Using:
+                                        <i>Java, Apache POI, Microsoft Excel</i>
+                                    </p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/ALNInventory">
@@ -516,7 +559,7 @@ _________________________________________________________ -->
                                 </div>
                             </div>
                         </div>
-
+                        <!-- Worm -->
                         <div class="reference-item" data-category="games">
                             <div class="reference">
                                 <a href="#">
@@ -537,7 +580,9 @@ _________________________________________________________ -->
                                         'full' apps that I had put together and was fundamental to my education in software
                                         development
                                     </p>
-                                    <p>Using: <i>Java</i></p>
+                                    <p>Using:
+                                        <i>Java</i>
+                                    </p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/WormGame">
@@ -547,6 +592,7 @@ _________________________________________________________ -->
                             </div>
 
                         </div>
+                        <!-- Activity Center -->
                         <div class="reference-item" data-category="webdesign">
                             <div class="reference">
                                 <a href="#">
@@ -568,7 +614,9 @@ _________________________________________________________ -->
                                         include social media integration, event invites, notifications, or private events.
                                     </p>
                                     <p>
-                                        Using: <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript, AWS, GIT</i>
+                                        Using:
+                                        <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript,
+                                            AWS, GIT</i>
                                     </p>
 
                                     <p class="buttons">
@@ -580,38 +628,7 @@ _________________________________________________________ -->
                                 </div>
                             </div>
                         </div>
-                        <div class="reference-item" data-category="webdesign">
-                            <div class="reference">
-                                <a href="#">
-                                    <img src="images/Projects/MarsRover.jpg" class="img-responsive" alt="" />
-
-                                    <div class="overlay">
-                                        <h3 class="reference-title">Mars Rover</h3>
-                                        <p>A rover controlling app</p>
-                                    </div>
-                                </a>
-
-                                <div class="sr-only reference-description" data-images="images/Projects/MarsRover1.jpg,images/Projects/MarsRover2.jpg,images/Projects/MarsRover3.jpg">
-
-                                    <p>This project was my entry to the Google code tech challenge found <a href="https://code.google.com/archive/p/marsrovertechchallenge/">here</a>.
-                                        The goal is to design an app to deploy rovers on curiously rectangular plateaus on Mars. Input is restricted to simple text stings which
-                                        introduced a number of challenges with validating input and processing commands. I thought this app would make a neat single page application
-                                        of sorts, so I used Angular 5. That helped me easily validate the user input and create an interesting method to display the data. Further
-                                        developments could include more game-like objects like obstacles, collisions, and displaying the rovers' routes as they move.
-                                    </p>
-                                    <p>
-                                        Using: <i>Angular 5, Node.js, Express.js, HTML5, CSS, Javascript, AWS, GIT</i>
-                                    </p>
-
-                                    <p class="buttons">
-                                        <a class="btn btn-primary" href="http://54.187.117.199/">
-                                            <i class="fa fa-globe"></i> Live Demo</a>
-                                        <a class="btn btn-primary" href="https://github.com/amalfushi/MarsRover">
-                                            <i class="fa fa-github"></i> GitHub</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- C# Users -->
                         <div class="reference-item" data-category="webdesign">
                             <div class="reference">
                                 <a href="#">
@@ -627,24 +644,26 @@ _________________________________________________________ -->
 
                                     <h4>**** In Progress ****</h4>
 
-                                    <p>This was built to continue practicing full-stack development. Functionally it is a
-                                        relatively simple messaging app allowing all users to start conversations on another
-                                        user's profile page. The conversations are similar to forums in that they can have any
-                                        number of replies from any user.
+                                    <p>This was built to continue practicing full-stack development. Functionally it is a relatively
+                                        simple messaging app allowing all users to start conversations on another user's
+                                        profile page. The conversations are similar to forums in that they can have any number
+                                        of replies from any user.
                                     </p>
                                     <p>
-                                        One of the main techniques I wanted to try was to build some admin functionality with
-                                        the dashboard. When the first user is registered, they are automatically assigned admin
-                                        level privileges. Admins are presented with different views than normal users to allow
-                                        them to edit and remove users when needed. Outside of the first admin, all other users
-                                        must have their priveledge level changed by a current admin to become one themselves.
+                                        One of the main techniques I wanted to try was to build some admin functionality with the dashboard. When the first user
+                                        is registered, they are automatically assigned admin level privileges. Admins are
+                                        presented with different views than normal users to allow them to edit and remove
+                                        users when needed. Outside of the first admin, all other users must have their priveledge
+                                        level changed by a current admin to become one themselves.
                                     </p>
                                     <p>
-                                        This is unfinished and needs some serious CSS work and layout work. Planned updates
-                                        include private messages, friends lists, and more robust user privileges (eg: only
-                                        system admins can make forum admins).
+                                        This is unfinished and needs some serious CSS work and layout work. Planned updates include private messages, friends lists,
+                                        and more robust user privileges (eg: only system admins can make forum admins).
                                     </p>
-                                    <p>Using: <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript, Git</i></p>
+                                    <p>Using:
+                                        <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript,
+                                            Git</i>
+                                    </p>
 
                                     <p class="buttons">
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/SharpSeaUsers">
