added proper link to resume

--- a/index.html
+++ b/index.html
@@ -662,7 +662,8 @@ _________________________________________________________ -->
                                     </p>
                                     <p>Using:
                                         <i>C#, ASP.NET, Entity Framework, MySQL, Twitter Bootstrap, HTML5, CSS, Javascript,
-                                            Git</i>
+                                            Git
+                                        </i>
                                     </p>
 
                                     <p class="buttons">
@@ -710,6 +711,9 @@ _________________________________________________________ -->
                                     </a>
                                     <a href="mailto:dustin.p.schroeder@gmail.com" class="external email" data-animate-hover="pulse" data-animate="fadeInUp">
                                         <i class="fa fa-envelope"></i>
+                                    </a>
+                                    <a href="https://drive.google.com/open?id=149j128nwvxEEztpLl_bJULln1Y8H03II" class="external resume" data-animate-hover="pulse" data-animate="fadeInUp">
+                                        <i class="fa fa-file-pdf-o"></i>
                                     </a>
                                 </p>
                             </div>
