Added Intiative Tracker

--- a/index.html
+++ b/index.html
@@ -449,6 +449,37 @@ _________________________________________________________ -->
                     <!-- Reference detail -->
 
                     <div id="references-masonry" data-animate="fadeInUp">
+                        <!-- Initiative Helper -->
+                        <div class="reference-item" data-category="webdesign">
+                            <div class="reference">
+                                <a href="#">
+                                    <img src="images/Projects/InitiativeHelper.jpgr" class="img-responsive" alt="" />
+
+                                    <div class="overlay">
+                                        <h3 class="reference-title">Initiative Helper</h3>
+                                        <p>A rover controlling app</p>
+                                    </div>
+                                </a>
+
+                                <div class="sr-only reference-description" data-images="images/Projects/InitiativeHelper1.jpg,images/Projects/InitiativeHelper2.jpg">
+
+                                    <p>As an avid tabletop gamer, one of the challenges that many game masters face is running combat quickly and efficiently. Keeping track of turn order across players and enemies is one of the things that gets mixed up in my group. I decided to make an app to to help quickly get initiative set up in a flexible and rule-agnostic manner. Initiative Helper allows the user to quickly add character cards as well as keep track of simple stats. One of the elements I'm most proud of is the dice roll functionality. It allows you to add dice rolls for ability checks/attacks and quickly returns the total and the result of every die rolled.
+                                    I intend to add a user login and registration so DMs can edit character cards ahead of time and allow users to select from a drop down menu rather than manually entering information. Letting users define the stats to be used on the cards will be another excellent addition and allow the helper to be more accessible to other RPG systems.
+                                    </p>
+                                    <p>
+                                        Using:
+                                        <i>Angular 5, Node.js, Express.js, HTML5, CSS, Javascript, AWS, GIT</i>
+                                    </p>
+
+                                    <p class="buttons">
+                                        <a class="btn btn-primary" href="http://34.221.24.81/">
+                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <a class="btn btn-primary" href="https://github.com/amalfushi/InitiativeTracker">
+                                            <i class="fa fa-github"></i> GitHub</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Mars Rover -->
                         <div class="reference-item" data-category="webdesign">
                             <div class="reference">
@@ -478,8 +509,8 @@ _________________________________________________________ -->
                                     </p>
 
                                     <p class="buttons">
-                                        <a class="btn btn-primary" href="http://54.187.117.199/">
-                                            <i class="fa fa-globe"></i> Live Demo</a>
+                                        <!-- <a class="btn btn-primary" href="http://54.187.117.199/">
+                                            <i class="fa fa-globe"></i> Live Demo</a> -->
                                         <a class="btn btn-primary" href="https://github.com/amalfushi/MarsRover">
                                             <i class="fa fa-github"></i> GitHub</a>
                                     </p>
