--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ _________________________________________________________ -->
                         <div class="reference-item" data-category="webdesign">
                             <div class="reference">
                                 <a href="#">
-                                    <img src="images/Projects/InitiativeHelper.jpgr" class="img-responsive" alt="" />
+                                    <img src="images/Projects/InitiativeHelper.jpg" class="img-responsive" alt="" />
 
                                     <div class="overlay">
                                         <h3 class="reference-title">Initiative Helper</h3>
