added description to Initiative Tracker thumbnail

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ _________________________________________________________ -->
 
                                     <div class="overlay">
                                         <h3 class="reference-title">Initiative Helper</h3>
-                                        <p>A rover controlling app</p>
+                                        <p>A Tabletop Game Helper</p>
                                     </div>
                                 </a>
 
