Update Initiative Tracker Images

--- a/index.html
+++ b/index.html
@@ -461,11 +461,12 @@ _________________________________________________________ -->
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="images/Projects/InitiativeHelper1.jpg,images/Projects/InitiativeHelper2.jpg">
+                                <div class="sr-only reference-description" data-images="images/Projects/InitiativeHelper1.jpg,images/Projects/InitiativeHelper2.jpg,images/Projects/InitiativeHelper.gif">
 
                                     <p>As an avid tabletop gamer, one of the challenges that many game masters face is running combat quickly and efficiently. Keeping track of turn order across players and enemies is one of the things that gets mixed up in my group. I decided to make an app to to help quickly get initiative set up in a flexible and rule-agnostic manner. Initiative Helper allows the user to quickly add character cards as well as keep track of simple stats. One of the elements I'm most proud of is the dice roll functionality. It allows you to add dice rolls for ability checks/attacks and quickly returns the total and the result of every die rolled. The dice strings are validated, tokenized, and computed client side.
-                                    I intend to add a user login and registration so DMs can edit character cards ahead of time and allow users to select from a drop down menu rather than manually entering information. Letting users define the stats to be used on the cards will be another excellent addition and allow the helper to be more accessible to other RPG systems.
+                                    Users can define their own stats to use with the character cards leaving this app to be used with any system. Cards can be quickly created, saved, and updated. Saved characters can be copied to the current initiative from a drop down.  Future updates include increasing usability by providing a turn-tracker to see who's turn it is, cloud storage for characters, and general usability/tooltips.
                                     </p>
+                                    <video src="images/Projects/ActivityCenter.mp4"></video>
                                     <p>
                                         Using:
                                         <i>Angular 5, Node.js, Express.js, HTML5, CSS, Javascript, AWS, GIT</i>
@@ -529,7 +530,7 @@ _________________________________________________________ -->
                                     </div>
                                 </a>
 
-                                <div class="sr-only reference-description" data-images="images/Projects/C-Sharp-Uno-1.jpg,images/Projects/C-Sharp-Uno-2.jpg,images/Projects/C-Sharp-Uno-3.jpg">
+                                <div class="sr-only reference-description" data-images="images/Projects/InitiativeTracker.mp4,images/Projects/C-Sharp-Uno-1.jpg,images/Projects/C-Sharp-Uno-2.jpg,images/Projects/C-Sharp-Uno-3.jpg">
 
                                     <p>As part of an afternoon Hackathon, I worked with two other teammates to put together
                                         a C# Version of Uno. The program runs entirely in terminal and we experimented with
